--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@googlemaps/react-wrapper": "^1.1.33",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@types/google.maps": "^3.48.8",
     "@types/node": "^17.0.32",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
