--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.9.0",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@googlemaps/react-wrapper": "^1.1.33",
     "@mui/icons-material": "^5.6.2",
@@ -12,6 +14,7 @@
     "@types/node": "^17.0.32",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "next": "^12.1.6",
     "papaparse": "^5.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -20,7 +23,10 @@
     "typescript": "^4.6.4"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "eslintConfig": {
     "extends": [
