--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@googlemaps/react-wrapper": "^1.1.33",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "@types/google.maps": "^3.48.8",
     "@types/node": "^17.0.32",
     "@types/react": "^18.0.9",
@@ -18,7 +19,7 @@
     "papaparse": "^5.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "6",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4"
   },
