--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.32",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "axios": "^0.27.2",
     "firebase-admin": "^10.2.0",
     "next": "^12.1.6",
     "papaparse": "^5.3.2",
