#31: Process data for San Francisco simulation

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ yarn-error.log*
 simulations/**/process_*.py
 simulations/**/raw_data.csv
 simulations/belo_horizonte/VR*.csv
+simulations/san_francisco/new_*.csv
