--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 firebaseConfig.json
+.vscode
 
 # dependencies
 /node_modules
@@ -31,5 +32,3 @@ yarn-error.log*
 
 simulations/**/process_*.py
 simulations/**/raw_data.csv
-simulations/belo_horizonte/VR*.csv
-simulations/san_francisco/new_*.csv
